<resources>
    <string name="app_name">Activity Tracker</string>
    <string name="best_text">Пожалуй лучший фитнес трекер в ДВФУ</string>
    <string name="last_text">Созданный студентами 2-го курса</string>
    <string name="reg_text">Зарегистрироваться</string>
    <string name="already_have">Уже есть аккаунт?</string>
    <string name="register_head">Регистрация</string>
    <string name="enter_head">Вход</string>
    <string name="login_button">Войти</string>
    <string name="login_hint">Логин</string>
    <string name="name_hint">Имя</string>
    <string name="pass_hint">Пароль</string>
    <string name="re_pass_hint">Повторите пароль</string>
    <string name="sex">Пол</string>
    <string name="image">IMG?</string>
    <string name="men">Мужской</string>
    <string name="women">Женский</string>
    <string name="agreement">Нажимая на кнопку, вы соглашаетесь с
        <a style="text-decoration: none;" href="#">политикой конфиденциальности</a> и обработки
        персональных данных, а также принимаете
        <a style="text-decoration: none;" href="#">пользовательское соглашение</a>
    </string>
    <string name="activity">Активность</string>
    <string name="profile">Профиль</string>
    <string name="my_activity">Моя</string>
    <string name="user_activity">Пользователей</string>
    <string name="start_finish">|</string>
    <string name="start">Старт</string>
    <string name="finish">Финиш</string>
    <string name="some_text">Some text</string>
    <string name="yesterday">Вчера</string>
    <string name="save">Сохранить</string>
    <string name="change_pass">Изменить пароль</string>
    <string name="exit_button">Выйти</string>
    <string name="old_pass">Старый пароль</string>
    <string name="new_pass">Новый пароль</string>
    <string name="accept">Принять</string>
    <string name="go">Погнали? :)</string>
    <string name="begin">Начать</string>
    <string name="share">Поделиться</string>
    <string name="delete">Удалить</string>
</resources>